# ia-daryal

./: .gitignore  .replit  INSTRUCCIONES_LOCAL.md  apk_guide.md  ar.txt  backend - Acceso directo.lnk  capacitor.config.json  instrucciones.txt  package-lock.json  package.json  pyproject.toml  replit.md
attached_assets/: Diagnosis_1767877283748.jsx  Home_1767877255199.jsx  Pasted--1-Diagn-stico-T-cnico-Real-Librer-a-python-obd-En-luga_1766821406190.txt  Pasted-ERROR-Cannot-read-properties-of-undefined-reading-map-T_1767875472471.txt  Pasted-El-c-digo-de-diagn-stico-OBD-II-C3513-es-un-c-digo-espe_1767875748381.txt  Pasted-Objetivo-general-Adaptar-y-reorganizar-los-componentes-_1767697917111.txt  __init___1767874072515.py  api_1767870962720.py  app_1767727180999.py  app_1767870938221.py  openai_helper_1767870950517.py  rag_helper_1767702782812.py
backend/: .env  app.py  config.py  requirements.txt  test_env.py
backend/env/: pyvenv.cfg
backend/routes/: api.py
backend/utils/: obd_helper.py  openai_helper.py
daryal/: .firebaserc  .gitignore  capacitor.config.json  capacitor.config.ts  firebase.json  jsconfig.json  package-lock.json  package.json
daryal/android/app/: build.gradle
daryal/public/: index.html  manifest.json
daryal/public/planosGLb/: 0001-0150.mkv  3.glb
daryal/src/: App.css  App.jsx  App.scss  ErrorBoundary.js  firebase.js  index.css  package.json
daryal/src/api/: openai.js
daryal/src/components/: HistoryPanel.jsx
daryal/src/hooks/: useWelcomeState.js
server/: app.py  config.py
server/routes/: api.py
server/utils/: openai_helper.py
(+98 files in other folders)
